@@ -1,6 +1,7 @@
 = Version History =
 x.x:
 - fixed: PHP notice undeclared variable
+- fixed: PHP warning in content_stats widget
 
 2.1 (2013-04-05):
 - changed: made compatible with Elgg 1.8.14
